src/test/ui/type-alias-impl-trait/type-alias-impl-trait-const.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/type-alias-impl-trait-const.rs:3:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error[E0308]: mismatched types
  --> $DIR/type-alias-impl-trait-const.rs:13:19
   |
LL | pub type Foo = impl Debug;
   |                ---------- the expected opaque type
...
LL | const _FOO: Foo = 5;
   |                   ^ expected opaque type, found integer
   |
   = note: expected opaque type `impl Debug`
                     found type `{integer}`

error: could not find defining uses
  --> $DIR/type-alias-impl-trait-const.rs:10:16
   |
LL | pub type Foo = impl Debug;
   |                ^^^^^^^^^^

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
